--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "lint": "eslint",
-    "format": "prettier --write --plugin-search-dir=. src"
+    "format": "prettier --write --plugin-search-dir=. src",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^4.0.1",
     "eslint": "^8.39.0",
     "eslint-plugin-svelte": "^2.27.0",
+    "husky": "^8.0.0",
+    "husky-init": "^8.0.0",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.0",
+    "pretty-quick": "^3.1.3",
     "svelte": "^3.57.0",
     "svelte-check": "^2.10.3",
     "tslib": "^2.5.0",
